dowgraded to Java 17, added multi-release support with Java 21 and 25, replaced Icy's uber jars with direct dependencies, added imglib2 dependencies for future JAI replacement